--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "@emotion/styled": "^11.10.6",
     "@inboxsdk/core": "^0.2.20",
     "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.12.1"
+    "@mui/material": "^5.12.1",
+    "axios": "^1.3.6"
   },
   "devDependencies": {
     "copy-webpack-plugin": "^11.0.0",
